--- a/Plugins/LanguageInstructionProgram_StartPageAlert/StartPage_Alerts.html
+++ b/Plugins/LanguageInstructionProgram_StartPageAlert/StartPage_Alerts.html
@@ -2,7 +2,7 @@
 
 <div>
     <!-- POWERSCHOOL WILDCARD LOGIC:
-      ~[pref:XXXX]: Tells PowerSchool to go look at the "Settings Page" values you saved.
+      ~[pref:XXXX]: Tells PowerSchool to go look at the "Settings Page" values in pref html file.
       ~[wc:XXXX]: A "Wildcard Call" that tells the Start Page to go run the code inside your .sql file.
     -->
     ~[if#HIDEELNOLIP.~[pref:d63spahideelnolip]=1][else#HIDEELNOLIP]
